ajt soiree / usersoiree

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
 <body>
 
 {% include('partials/header.html.twig') %}
+{% include('partials/modal_deconnexion.html.twig') %}
 {% for label, messages in app.flashes %}
     {% for message in messages %}
         {% set flashdate = date('now') %}
