--- a/templates/soiree/soiree.html.twig
+++ b/templates/soiree/soiree.html.twig
@@ -37,8 +37,21 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6"><h5 class="card-title">Invités</h5></div>
-                                        <div class="col-md-6"><a href="{{ path('select_nb', {'id' : soiree.id}) }}"
-                                                                 class="btn btn-success">Ajouter un invité</a></div>
+                                        {% if soiree.isFull == false %}
+                                            <div class="col-md-3"><a href="{{ path('select_nb', {'id' : soiree.id}) }}"
+                                                                     class="btn btn-success">Ajouter un invité</a></div>
+
+                                            <div class="col-md-3"><a
+                                                        href="{{ path('soiree_full', {'id' : soiree.id}) }}"
+                                                        class="btn btn-warning">Verrouiller la liste</a></div>
+                                            {% else %}
+                                                <div class="col-md-3"><a href="{{ path('select_nb', {'id' : soiree.id}) }}"
+                                                                         class="btn btn-success">Dépenses</a></div>
+
+                                                <div class="col-md-3"><a
+                                                            href="{{ path('soiree_full', {'id' : soiree.id}) }}"
+                                                            class="btn btn-warning">Dû/Avoir</a></div>
+                                        {% endif %}
                                     </div>
                                     <hr>
                                     <div class="card-text mb-3">
@@ -49,7 +62,8 @@
                                                     <div class="row">
                                                         <div class="col-md-9 ">
 
-                                                            <a href=""><h5 class="mb-1"><span
+                                                            <a href="{{ path('profile',{'id' : guest.id}) }}"><h5
+                                                                        class="mb-1"><span
                                                                             class="badge badge-dark mr-2"><i
                                                                                 class="fad fa-mask"></i></span>{{ guest.FullName }}
                                                                 </h5>
