--- a/templates/soiree/soiree.html.twig
+++ b/templates/soiree/soiree.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}MyParty - Soirée{{ soiree.id }}{% endblock %}
+{% block title %}MyParty - Soirée {{ soiree.id }}{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
@@ -32,20 +32,20 @@
                                                         </a>
                                                     </div>
                                                     {% if soiree.isFull == true %}
-                                                    <div class="col-md-3 text-center">
-                                                        {% if hostSoiree.expenses == null %}
-                                                            0
-                                                        {% else %}
-                                                            {{ hostSoiree.expenses|number_format(2) }}€
-                                                        {% endif %}
-                                                    </div>
-                                                    <div class="col-md-3 text-center">
-                                                        {% if hostSoiree.debts == null %}
-                                                            0
-                                                        {% else %}
-                                                            {{ hostSoiree.debts|number_format(2) }}€
-                                                        {% endif %}
-                                                    </div>
+                                                        <div class="col-md-3 text-center">
+                                                            {% if hostSoiree.expenses == null %}
+                                                                0€
+                                                            {% else %}
+                                                                {{ hostSoiree.expenses|number_format(2) }}€
+                                                            {% endif %}
+                                                        </div>
+                                                        <div class="col-md-3 text-center">
+                                                            {% if hostSoiree.debts == null %}
+                                                                0€
+                                                            {% else %}
+                                                                {{ hostSoiree.debts|number_format(2) }}€
+                                                            {% endif %}
+                                                        </div>
                                                     {% endif %}
                                                 </div>
                                             </div>
@@ -87,21 +87,21 @@
 
                                                         </div>
                                                         {% if soiree.isFull == true %}
-                                                        <div class="col-md-3 text-center">
-                                                            {% if guestsSoiree[loop.index-1].expenses == null %}
-                                                                0
-                                                            {% else %}
-                                                                {{ guestsSoiree[loop.index-1].expenses|number_format(2) }}€
-                                                            {% endif %}
+                                                            <div class="col-md-3 text-center">
+                                                                {% if guestsSoiree[loop.index-1].expenses == null %}
+                                                                    0€
+                                                                {% else %}
+                                                                    {{ guestsSoiree[loop.index-1].expenses|number_format(2) }}€
+                                                                {% endif %}
 
-                                                        </div>
-                                                        <div class="col-md-3 text-center">
-                                                            {% if guestsSoiree[loop.index-1].debts == null %}
-                                                                0
-                                                            {% else %}
-                                                                {{ guestsSoiree[loop.index-1].debts|number_format(2) }}€
-                                                            {% endif %}
-                                                        </div>
+                                                            </div>
+                                                            <div class="col-md-3 text-center">
+                                                                {% if guestsSoiree[loop.index-1].debts == null %}
+                                                                    0€
+                                                                {% else %}
+                                                                    {{ guestsSoiree[loop.index-1].debts|number_format(2) }}€
+                                                                {% endif %}
+                                                            </div>
                                                         {% endif %}
                                                     </div>
                                                 </div>
@@ -119,14 +119,18 @@
                             </div>
                         </div>
                         <div class="col-md-3">
-                            <p>La soirée aura lieu le : <br> <span class="h6">{{ soiree.date | date('d/m/Y') }} à {{ soiree.date | date('H') }}h{% if  soiree.date | date('i') != 00 %}{{ soiree.date | date('i') }}{% endif %}</span>.</p>
+                            <p>La soirée aura lieu le : <br> <span
+                                        class="h6">{{ soiree.date | date('d/m/Y') }} à {{ soiree.date | date('H') }}h{% if  soiree.date | date('i') != 00 %}{{ soiree.date | date('i') }}{% endif %}</span>.
+                            </p>
                             <hr>
                             <a href="" class="btn btn-warning btn-block">Modifier mes dépenses</a>
                         </div>
                     </div>
                     <h5>Tricount :</h5>
                     <p>
-                        machin doit x a machin2
+                        {% for line in tricount %}
+                            {{ line }}<br>
+                        {% endfor %}
                     </p>
                 </div>
 
