--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 7px;
 }
 
 /* Track */
@@ -22,5 +22,25 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
     border-radius: 10px;
+}
 
+.dashboard::-webkit-scrollbar {
+    width: 2px;
+}
+
+/* Track */
+.dashboard::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0);
+}
+
+/* Handle */
+.dashboard::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+.dashboard::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    border-radius: 10px;
 }
