--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -10,19 +10,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('home') }}">Accueil<span class="sr-only">(current)</span></a>
             </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Catégories
-                </a>
-                {#<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    {% for categorie in categories %}
-                        <a class="dropdown-item"
-                           href="{{ path('pannes',{'id':categorie.id}) }}">{{ categorie.name }}</a>
-                    {% endfor %}
-                </div>#}
+            {% if app.user is defined %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('soirees', {'id' : app.user.id}) }}">Mes soirées<span class="sr-only">(current)</span></a>
             </li>
+            {% endif %}
         </ul>
         {% if app.user %}
             <span class="navbar-text">
