--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -46,7 +46,7 @@
                                             {% if allSoirees > 6 %}
                                         <div class="list-group-item list-group-item-action">
                                             <div class="row">
-                                                <h5><a class="ml-3" href="">Voir plus >></a></h5>
+                                                <h5><a class="ml-3" href="{{ path('soirees', {'id' : app.user.id}) }}">Voir plus >></a></h5>
                                             </div>
                                         </div>
                                     {% endif %}
